force-app/main/default/objects/Specialty__c/Specialty__c.object-meta.xml
<CustomObject>
    <description>Specialty represents specialties for a practitioner or a service organization. A provider can have multiple specialties such as anesthesiology and cardiovascular.</description>
    <label>Specialty</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Specialty</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>