force-app/main/default/objects/Specialty__c/fields/Specialty_Name__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Name__c</fullName>
    <label>Specialty Name</label>
    <type>TextArea</type>
</CustomField>