force-app/main/default/objects/Specialty__c/fields/Specialty_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Name_Text__c</fullName>
    <formula>Specialty_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specialty Name Text</label>
    <type>Text</type>
</CustomField>